--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.dark {
+  background-color: #333;
+  color: #fff;
+}
+.light {
+  background-color: #fff;
+  color: #333;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
