--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -40,6 +40,10 @@
   /* border: 1px solid black; */
   padding: 10px;
   margin-right: 10px;
+  text-align: left;
+}
+.tracks-col ul {
+  text-align: left;
 }
 .tracks-lyrics-col {
   display: flex;
@@ -55,6 +59,11 @@
   flex: 1;
   overflow-y: scroll;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -62,5 +71,26 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media screen and (max-width: 600px) {
+  .App-header {
+    font-size: 16px;
+  }
+
+  .artists-col,
+  .tracks-lyrics-col {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .tracks-lyrics-col {
+    height: auto;
+  }
+
+  .App-link {
+    margin-top: 20px;
   }
 }
