Added background for the highlights

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -67,7 +67,17 @@ a {
 .artist_track{
   text-align: left;
 }
+.artists-col li.active {
+  font-weight: bold;
+  background-color: black;
+  width: 20%;
+}
+.tracks-col li.active {
+  font-weight: bold;
+  background-color: black;
+  width: 60%;
 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
