--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -32,22 +32,55 @@
   background-color: #333;
   color: #fff;
 }
+
 .light {
   background-color: #fff;
   color: #333;
 }
+
 .artists-col {
   /* border: 1px solid black; */
   padding: 10px;
   margin-right: 10px;
   text-align: left;
+
+
+
 }
+
+.track_name {
+  /* border: 1px solid black; */
+  padding: 10px;
+  background-color: grey;
+  display: block;
+  margin-bottom: 10px;
+  width: 250px;
+  text-decoration: none;
+  color: black;
+  margin-top: 30px;
+
+}
+
+.track_name:hover {
+  background-color: green;
+}
+
+.artist_name {
+  margin-top: 30px;
+}
+
+ul {
+  list-style-type: none;
+}
+
 .tracks-col ul {
   text-align: left;
 }
+
 .tracks-lyrics-col {
   display: flex;
-  height: 500px; /* change this to your desired fixed height */
+  height: 500px;
+  /* change this to your desired fixed height */
 }
 
 .tracks-col {
@@ -55,37 +88,58 @@
   /* overflow-y: scroll; */
 }
 
+.artist_div {
+  background-color: grey;
+  border-radius: 10px;
+  width: 400px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 70px;
+  text-decoration: none;
+}
+
 .lyrics-col {
   flex: 1;
   overflow-y: scroll;
 }
+
 a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
-.artist_track{
+
+.artist_track {
   text-align: left;
 }
+
 .artists-col li.active {
   font-weight: bold;
   background-color: black;
-  width: 20%;
+  width: 30%;
 }
+
 .tracks-col li.active {
-  font-weight: bold;
-  background-color: black;
-  width: 60%;
+  font-weight: 10px;
+  font-size: xx-large;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-style: italic;
+
+  /* background-color: black; */
+
 
 }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 @media screen and (max-width: 600px) {
   .App-header {
     font-size: 16px;
