--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -47,6 +47,22 @@
 
 
 }
+.num_artist{
+  border-width: 1px solid black;
+  border-radius: 10px;
+  padding-left: 10px;
+  margin-left: 40px;
+  margin-bottom: 10px;
+  height: 30px;
+}
+.num_artist2{
+  border-width: 1px solid black;
+  border-radius: 10px;
+  padding-left: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  height: 30px;
+}
 
 .track_name {
   /* border: 1px solid black; */
