Removed background color for select item

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -140,6 +140,7 @@ a {
   font-size: xx-large;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: italic;
+  color: red;
 
   /* background-color: black; */
 
